// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The Cornerstone Toggle executes a callback 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 label {
  margin-right: 10px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 75%;
}

<div
  className="c0"
>
  <label
    htmlFor={undefined}
  >
    Cornerstone
  </label>
  <span
    className="components-form-toggle"
  >
    <input
      checked={false}
      className="components-form-toggle__input"
      id={undefined}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="components-form-toggle__track"
    />
    <span
      className="components-form-toggle__thumb"
    />
    <svg
      aria-hidden="true"
      className="components-form-toggle__off"
      focusable="false"
      height="6"
      role="img"
      viewBox="0 0 6 6"
      width="6"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 1.5c.8 0 1.5.7 1.5 1.5S3.8 4.5 3 4.5 1.5 3.8 1.5 3 2.2 1.5 3 1.5M3 0C1.3 0 0 1.3 0 3s1.3 3 3 3 3-1.3 3-3-1.3-3-3-3z"
      />
    </svg>
  </span>
</div>
`;

exports[`The CornerstoneToggle matches the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 label {
  margin-right: 10px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  max-width: 75%;
}

<div
  className="c0"
>
  <label
    htmlFor={undefined}
  >
    Cornerstone
  </label>
  <span
    className="components-form-toggle is-checked"
  >
    <input
      checked={true}
      className="components-form-toggle__input"
      id={undefined}
      onChange={[Function]}
      type="checkbox"
    />
    <span
      className="components-form-toggle__track"
    />
    <span
      className="components-form-toggle__thumb"
    />
    <svg
      aria-hidden="true"
      className="components-form-toggle__on"
      focusable="false"
      height="6"
      role="img"
      viewBox="0 0 2 6"
      width="2"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h2v6H0z"
      />
    </svg>
  </span>
</div>
`;
